This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

19-May-2009 (Gnomi)
  - (prolang.y, interpret.c) Corrected the handling of implicit context
    variables in nested inline closures and allowed the initializers
    of explicit context variables to reference other explicit context
    variables. (Bug #631)

18-May-2009 (Gnomi)
  - (pkg-xml2.c, arraylist.c, configure) Added support for XML parsing
    using libxml2. (Bug #538, thanks, Bardioc!)
  - (interpret.c) Ignore any arguments passed to a variable closure
    instead of throwing an error. (Bug #612)

12-May-2009 (Fuchur)
  - (object.c) compile fix for !USE_NEW_INLINES
  - (prolang.y) forbid accessing closure arguments from within the
    closure's context.
  - (prolang.y) Fix infinite loop when redefining a closure argument
    in its closure's context.

11-May-2009 (Gnomi)
  - (sprintf.c) Don't rely on overflow, as gcc optimizes away overflow checks.

10-May-2009 (Zesstra)
  - (smalloc.c, slaballoc.) Replaced SINT by GRANULARITY
    The define SINT was ill-named. All occurences were renamed to GRANULARITY
    which describes the semantics of the define much better and it is now
    defined as being sizeof(word_t).
    Additionally, MEM_ALIGN is now defined as being the same as GRANULARITY.
  - (xalloc.c) Replaced define by enum.
    The defines for the header fields of memory blocks were replaced by an enum.
    Additionally a comment about word_t is added.
  - (xalloc.c) Fixed syntactial errors in pre-compiler statements.
    Because MEM_ALIGN is now a sizeof() expression, it can't be used in
    conditional compilation. Replaced them by real if() (which are eliminated
    by the compiler because their expression is constant).
  - (object.c) Fixed buffer overflow in save_svalue() (#634)
    save_svalue() used PRIx16 to print the exponent of a float. Unfortunately,