@@ -72,6 +72,6 @@ extern void dprintf1(int fd, char *s, p_int a);
 extern void dprintf2(int fd, char *s, p_int a, p_int b);
 extern void dprintf3(int fd, char *s, p_int a, p_int b, p_int c);
 extern void dprintf4(int fd, char *s, p_int a, p_int b, p_int c, p_int d);
-
+extern void set_cloexec_flag(int fd);
 
 #endif /* MAIN_H__ */
