@@ -6,6 +6,8 @@ See the file HISTORY for a user-oriented summary of all the changes.
     variables in nested inline closures and allowed the initializers
     of explicit context variables to reference other explicit context
     variables. (Bug #631)
+  - (main.c, comm.c) Set the close-on-exec-flag on open file descriptors,
+    so they are not passed to erq. (Bug #629)
 
 18-May-2009 (Gnomi)
   - (pkg-xml2.c, arraylist.c, configure) Added support for XML parsing
